@@ -60,83 +60,86 @@ next_blk:;
         }
 }
 
+// 1k grids per block
+#define GRIDS_BLOCK     512
+
 void VXCgen_grid(double *out, double *coords, double *atm_coords,
                  double *radii_table, int natm, int ngrids)
 {
         const size_t Ngrids = ngrids;
-        int i, j, n;
+        int i, j;
         double dx, dy, dz, dist;
-        double *grid_dist = malloc(sizeof(double) * natm*Ngrids);
+        double *atom_dist = malloc(sizeof(double) * natm*natm);
         for (i = 0; i < natm; i++) {
-                for (n = 0; n < Ngrids; n++) {
-                        dx = coords[0*Ngrids+n] - atm_coords[i*3+0];
-                        dy = coords[1*Ngrids+n] - atm_coords[i*3+1];
-                        dz = coords[2*Ngrids+n] - atm_coords[i*3+2];
-                        grid_dist[i*Ngrids+n] = sqrt(dx*dx + dy*dy + dz*dz);
+                for (j = 0; j < i; j++) {
+                        dx = atm_coords[i*3+0] - atm_coords[j*3+0];
+                        dy = atm_coords[i*3+1] - atm_coords[j*3+1];
+                        dz = atm_coords[i*3+2] - atm_coords[j*3+2];
+                        atom_dist[i*natm+j] = 1 / sqrt(dx*dx + dy*dy + dz*dz);
                 }
         }
 
-        double *bufs[MAX_THREADS];
 #pragma omp parallel default(none) \
-        shared(out, grid_dist, atm_coords, radii_table, natm, bufs) \
-        private(i, j, n, dx, dy, dz)
+        shared(out, coords, atm_coords, atom_dist, radii_table, natm) \
+        private(i, j, dx, dy, dz)
 {
-        int thread_id = omp_get_thread_num();
-        double *buf = out;
-        if (thread_id != 0) {
-                buf = malloc(sizeof(double) * natm*Ngrids);
-        }
-        bufs[thread_id] = buf;
-        for (i = 0; i < natm*Ngrids; i++) {
-                buf[i] = 1;
-        }
-        int ij;
+        double *grid_dist = malloc(sizeof(double) * natm*GRIDS_BLOCK);
+        double *buf = malloc(sizeof(double) * natm*GRIDS_BLOCK);
+        double *g = malloc(sizeof(double) * GRIDS_BLOCK);
+        size_t ig0, n, ngs;
         double fac;
-        double *g = malloc(sizeof(double)*Ngrids);
 #pragma omp for nowait schedule(static)
-        for (ij = 0; ij < natm*natm; ij++) {
-                i = ij / natm;
-                j = ij % natm;
-                if (i <= j) {
-                        continue;
-                }
+        for (ig0 = 0; ig0 < Ngrids; ig0 += GRIDS_BLOCK) {
+                ngs = MIN(Ngrids-ig0, GRIDS_BLOCK);
+                for (i = 0; i < natm; i++) {
+                for (n = 0; n < ngs; n++) {
+                        dx = coords[0*Ngrids+ig0+n] - atm_coords[i*3+0];
+                        dy = coords[1*Ngrids+ig0+n] - atm_coords[i*3+1];
+                        dz = coords[2*Ngrids+ig0+n] - atm_coords[i*3+2];
+                        grid_dist[i*GRIDS_BLOCK+n] = sqrt(dx*dx + dy*dy + dz*dz);
+                        buf[i*GRIDS_BLOCK+n] = 1;
+                } }
 
-                dx = atm_coords[i*3+0] - atm_coords[j*3+0];
-                dy = atm_coords[i*3+1] - atm_coords[j*3+1];
-                dz = atm_coords[i*3+2] - atm_coords[j*3+2];
-                fac = 1 / sqrt(dx*dx + dy*dy + dz*dz);
+                for (i = 0; i < natm; i++) {
+                for (j = 0; j < i; j++) {
 
-                for (n = 0; n < Ngrids; n++) {
-                        g[n] = grid_dist[i*Ngrids+n] - grid_dist[j*Ngrids+n];
-                        g[n] *= fac;
-                }
-                if (radii_table != NULL) {
-                        fac = radii_table[i*natm+j];
-                        for (n = 0; n < Ngrids; n++) {
-                                g[n] += fac * (1 - g[n]*g[n]);
+                        fac = atom_dist[i*natm+j];
+                        for (n = 0; n < ngs; n++) {
+                                g[n] = (grid_dist[i*GRIDS_BLOCK+n] -
+                                        grid_dist[j*GRIDS_BLOCK+n]) * fac;
+                        }
+                        if (radii_table != NULL) {
+                                fac = radii_table[i*natm+j];
+                                for (n = 0; n < ngs; n++) {
+                                        g[n] += fac * (1 - g[n]*g[n]);
+                                }
+                        }
+                        for (n = 0; n < ngs; n++) {
+                                g[n] = (3 - g[n]*g[n]) * g[n] * .5;
+                        }
+                        for (n = 0; n < ngs; n++) {
+                                g[n] = (3 - g[n]*g[n]) * g[n] * .5;
+                        }
+                        for (n = 0; n < ngs; n++) {
+                                g[n] = (3 - g[n]*g[n]) * g[n] * .5;
+                                g[n] *= .5;
+                        }
+                        for (n = 0; n < ngs; n++) {
+                                buf[i*GRIDS_BLOCK+n] *= .5 - g[n];
+                                buf[j*GRIDS_BLOCK+n] *= .5 + g[n];
+                        }
+                } }
+
+                for (i = 0; i < natm; i++) {
+                        for (n = 0; n < ngs; n++) {
+                                out[i*Ngrids+ig0+n] = buf[i*GRIDS_BLOCK+n];
                         }
                 }
-                for (n = 0; n < Ngrids; n++) {
-                        g[n] = (3 - g[n]*g[n]) * g[n] * .5;
-                }
-                for (n = 0; n < Ngrids; n++) {
-                        g[n] = (3 - g[n]*g[n]) * g[n] * .5;
-                }
-                for (n = 0; n < Ngrids; n++) {
-                        g[n] = (3 - g[n]*g[n]) * g[n] * .5;
-                        g[n] *= .5;
-                }
-                for (n = 0; n < Ngrids; n++) {
-                        buf[i*Ngrids+n] *= .5 - g[n];
-                        buf[j*Ngrids+n] *= .5 + g[n];
-                }
-        }
-        NPomp_dprod_reduce_inplace(bufs, natm*Ngrids);
-        if (thread_id != 0) {
-                free(buf);
         }
         free(g);
-}
+        free(buf);
         free(grid_dist);
+}
+        free(atom_dist);
 }
 
